K8S/commands-depl.yaml
# DEPLOYMENT 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-depl
spec:
  replicas: 1
  selector: # selecionando o template
    matchLabels:
      app: commandsservice
  template: # definição do pod e do container (seleção do deployment)
    metadata:
      labels:
        app: commandsservice
    spec:
      containers:
        - name: commandsservice
          image: anastacio/commandsservice:latest

--- # SEPARAÇAO DO DEPLOYMENT DO CLUSTER IP SERVICE
apiVersion: v1
kind: Service
metadata: 
  name: commands-clusterip-srv
spec: 
  type : ClusterIP
  selector: 
    app: commandsservice
  ports:
    - name: commandsservice
      protocol: TCP
      port: 80
      targetPort: 80
