K8S/platforms-depl.yaml
# DEPLOYMENT 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1
  selector: # selecionando o template
    matchLabels:
      app: platformservice
  template: # definição do pod e do container (seleção do deployment)
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: anastacio/platformservice:latest

--- # SEPARAÇAO DO DEPLOYMENT DO CLUSTER IP SERVICE
apiVersion: v1
kind: Service
metadata: 
  name: platforms-clusterip-srv
spec: 
  type : ClusterIP
  selector: 
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 80
