K8S/ingress-srv.yaml
# INGRESS LOADBALANCER
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: acme.com # foi realizada uma mudança no c:/windows/system32/drivers/etc/hosts e incluido esse dominio para redirecionar para o 127.0.0.1
      http: 
        paths:
          - path: /api/platforms
            pathType: Prefix
            backend: 
              service:
                name: platforms-clusterip-srv
                port: 
                  number: 80
          - path: /api/c/platforms
            pathType: Prefix
            backend:
              service:
                name: commands-clusterip-srv
                port:
                  number: 80
